changed shadow and z-index, fixed nav

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     bottom:0;
     height: 400px;
     color: #f6edd3;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 a {
@@ -69,6 +70,7 @@ a {
 .journey-middle {
     flex: 2;
     background-color: #5D97D7;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
 .journey-right {
@@ -77,7 +79,9 @@ a {
 
 .journey img {
     width: 100%;
-    height: 100%
+    height: 100%;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        
 }
 
 ul {
